tests/compError/notLeakingAlias.ucl
// compError
// error: alias 'x' does not exist
// line:6 -> here

b = @y(Number)
	x

a = @x(Number)
	b 1